# celery-app

./: Dockerfile  README.md  main.py  pyproject.toml
config/celery/: celery_config.py
config/enviroment/: env_config.py
controller/s3/: s3_controller.py
service/s3/: s3_config.py  s3_service.py
tasks/: __init__.py
tasks/uploads/: upload_tasks.py
