[tool.poetry]
name = "celery-app"
version = "0.1.0"
description = ""
authors = ["denizparlak <parlak.deniss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
celery = "^5.4.0"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
boto3 = "^1.35.54"
python-multipart = "^0.0.17"
redis = "^5.2.0"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
